fix(Forms): Boost specificity of chunky radio buttons with headers to fix layout issues.

--- a/rocketbelt/components/radio-buttons/_radio-buttons-chunky.scss
+++ b/rocketbelt/components/radio-buttons/_radio-buttons-chunky.scss
@@ -69,21 +69,15 @@
     }
   }
 
-  &.radio-group-chunky-with-header {
-    li:not(:first-of-type) {
-      label {
-        margin-top: 1rem;
-      }
-    }
-
-    label {
-      padding: 0 !important;
+  &.radio-group-chunky.radio-group-chunky-with-header {
+    input + label {
+      margin-top: 1rem;
+      padding: 0;
       border-radius: 4px;
       flex-wrap: wrap;
 
       &::before {
-        margin-left: 1rem !important;
-        align-self: flex-start;
+        margin-left: 0.75rem;
       }
     }
 
